Update and rename parlour.html to index.html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <center>
         <h2>BRIDAL MAKEUP</h2>
         <p><b>₹10000</b></p>
-        <a href="bride.html"> click</a>
+        <a href="makeup.html"> click</a>
       </center>
     </div>
     <div class="flip-card">
@@ -133,4 +133,5 @@
 
 <script>
   AOS.init();
+
 </script>
