--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </h1>
   </header>
   <div class="rose">
-    <div><img src="D:/parlour/images/bride.jfif" data-aos="flip-left" class="image1" /></div>
+    <div><img src="bride.jfif" data-aos="flip-left" class="image1" /></div>
     <div>
       <center>
         <h2>BRIDAL MAKEUP</h2>
