--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
       <span>.....cutybeauty@gmail.com.....</span>
       <span><img src="D:\parlour\images\call.png"></span>
       <span>+91 9876543210</span>
-      <span><img src="D:\parlour\images\what.jpeg"></span>
-      <span><img src="D:\parlour\images\se.png"></span>
+      <span><img src="what.jpeg"></span>
+      <span><img src="se.png"></span>
   </nav>
   <header>
-    <img src="D:/parlour/images/girl.jfif">
-    <img src="D:/parlour/images/black.jfif" id="img-right">
+    <img src="girl.jfif">
+    <img src="black.jfif" id="img-right">
     <h1 class="luxury">
       <center>CUTY & BEAUTY<br> SALON </center>
     </h1>
@@ -50,7 +50,7 @@
 
   <div class="rose">
 
-    <div><img src="D:/parlour/images/bride1.jfif" data-aos="flip-down" class="image2" /></div>
+    <div><img src="bride1.jfif" data-aos="flip-down" class="image2" /></div>
     <div>
       <center>
         <h2>WATERPROOF MAKEUP</h2>
@@ -61,7 +61,7 @@
 
   </div>
   <div class="rose">
-    <div><img src="D:/parlour/images/hair1.jfif" data-aos="flip-right" class="image3" /></div>
+    <div><img src="hair1.jfif" data-aos="flip-right" class="image3" /></div>
     <div>
       <center>
         <h2>HAIR COLORING</h2>
@@ -73,7 +73,7 @@
   </div>
 
   <div class="rose">
-    <div><img src="D:/parlour/images/face.jfif" data-aos="flip-up" class="image4" /></div>
+    <div><img src="face.jfif" data-aos="flip-up" class="image4" /></div>
     <div>
       <center>
         <h2>FACIAL</h2>
@@ -83,7 +83,7 @@
     </div>
   </div>
   <div class="rose">
-    <div><img src="D:/parlour/images/hair2.jfif" data-aos="flip-up" class="image5" /></div>
+    <div><img src="hair2.jfif" data-aos="flip-up" class="image5" /></div>
     <div>
       <center>
         <h2>HAIR CUT</h2>
@@ -94,7 +94,7 @@
     </div>
   </div>
   <div class="rose">
-    <div><img src="D:/parlour/images/spa.jfif" data-aos="flip-right" class="image6" /></div>
+    <div><img src="spa.jfif" data-aos="flip-right" class="image6" /></div>
     <div>
       <center>
         <h2>HAIR SPA</h2>
@@ -105,7 +105,7 @@
     </div>
   </div>
   <div class="rose">
-    <div><img src="D:/parlour/images/pedi.jfif" data-aos="flip-left" class="image7" /></div>
+    <div><img src="pedi.jfif" data-aos="flip-left" class="image7" /></div>
     <div>
       <center>
         <h2>PEDI CURE</h2>
@@ -115,7 +115,7 @@
     </div>
   </div>
   <div class="rose">
-    <div><img src="D:/parlour/images/me4.jfif" data-aos="flip-down" class="image8" /></div>
+    <div><img src="me4.jfif" data-aos="flip-down" class="image8" /></div>
     <div>
       <center>
         <h2>BRIDAL MEHANDI</h2> <br><b>₹2000</b></p>
@@ -135,3 +135,4 @@
   AOS.init();
 
 </script>
+
