--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <nav>
     <div class="one">
       <span>.....cutybeauty@gmail.com.....</span>
-      <span><img src="D:\parlour\images\call.png"></span>
+      <span><img src="call.png"></span>
       <span>+91 9876543210</span>
       <span><img src="what.jpeg"></span>
       <span><img src="se.png"></span>
@@ -135,4 +135,5 @@
   AOS.init();
 
 </script>
+
 
