--- a/water.html
+++ b/water.html
@@ -99,7 +99,7 @@ header img{
         
     </nav>
  <header>   
-<img src="D:/STEFFI/girl.jfif">
+<img src="girl.jfif">
  <img src="black.jfif" id="img-right">
   <h1 style="font-family: cursive;"><center>CUTY & BEAUTY<br> SALON </center></h1>
   </header>
@@ -121,4 +121,5 @@ header img{
     <div>  <P><b>FULL COVERAGE MAKEUP<br>₹15000</b></P></div>
     </div>
 </body>
+
 </html>
