--- a/spa.html
+++ b/spa.html
@@ -97,7 +97,7 @@ header img{
         
     </nav>
  <header>   
-<img src="D:/STEFFI/girl.jfif">
+<img src="girl.jfif">
  <img src="black.jfif" id="img-right">
   <h1 style="font-family: cursive;"><center>CUTY & BEAUTY<br> SALON </center></h1>
   </header>
@@ -119,4 +119,5 @@ header img{
     <div>  <P><b>SCALP TREATMENT SPA<br>₹8000</b></P></div>
     </div>
 </body>
+
 </html>
