--- a/mehandi.html
+++ b/mehandi.html
@@ -98,7 +98,7 @@ header img{
         
     </nav>
  <header>   
-<img src="D:/STEFFI/girl.jfif">
+<img src="girl.jfif">
  <img src="black.jfif" id="img-right">
   <h1 style="font-family: cursive;"><center>CUTY & BEAUTY<br> SALON </center></h1>
   </header>
@@ -120,4 +120,5 @@ header img{
     <div>  <P><b>SIMPLE MEHANDI<br>₹1000</b></P></div>
     </div>
 </body>
+
 </html>
