--- a/makeup.html
+++ b/makeup.html
@@ -98,7 +98,7 @@ header img{
         
     </nav>
  <header>   
-<img src="D:/STEFFI/girl.jfif">
+<img src="girl.jfif">
  <img src="black.jfif" id="img-right">
   <h1 style="font-family: cursive;"><center>CUTY & BEAUTY<br> SALON </center></h1>
   </header>
@@ -121,3 +121,4 @@ header img{
     </div>
 </body>
 </html>
+
