--- a/haircut.html
+++ b/haircut.html
@@ -100,7 +100,7 @@ header img{
         
     </nav>
  <header>   
-<img src="D:/STEFFI/girl.jfif">
+<img src="girl.jfif">
  <img src="black.jfif" id="img-right">
   <h1 style="font-family: cursive;"><center>CUTY & BEAUTY<br> SALON </center></h1>
   </header>
@@ -122,4 +122,5 @@ header img{
     <div>  <P><b>V CUT WITH LAYER<br>₹10000</b></P></div>
     </div>
 </body>
+
 </html>
