--- a/hair.html
+++ b/hair.html
@@ -108,7 +108,7 @@ header img{
         
     </nav>
  <header>   
-<img src="D:/STEFFI/girl.jfif">
+<img src="girl.jfif">
  <img src="black.jfif" id="img-right">
   <h1 style="font-family: cursive;"><center>CUTY & BEAUTY<br> SALON </center></h1>
   </header>
@@ -130,4 +130,5 @@ header img{
     <div>  <P><b>OMBRE<br> COLORING<br>₹15000</b></P></div>
     </div>
 </body>
+
 </html>
