--- a/hair.html
+++ b/hair.html
@@ -101,10 +101,10 @@ header img{
     <nav>
         <div class="one">
         <span>.....cutybeauty@gmail.com.....</span>
-        <span><img src="D:\STEFFI\call.png"></span>
+        <span><img src="call.png"></span>
         <span>+91 9876543210</span>
-        <span><img src="D:\STEFFI\what.jpeg"></span>
-        <span><img src="D:\STEFFI\se.png"></span>
+        <span><img src="what.jpeg"></span>
+        <span><img src="se.png"></span>
         
     </nav>
  <header>   
@@ -132,3 +132,4 @@ header img{
 </body>
 
 </html>
+
