--- a/mehandi.html
+++ b/mehandi.html
@@ -91,10 +91,10 @@ header img{
      <nav>
         <div class="one">
         <span>.....cutybeauty@gmail.com.....</span>
-        <span><img src="D:\STEFFI\call.png"></span>
+        <span><img src="call.png"></span>
         <span>+91 9876543210</span>
-        <span><img src="D:\STEFFI\what.jpeg"></span>
-        <span><img src="D:\STEFFI\se.png"></span>
+        <span><img src="what.jpeg"></span>
+        <span><img src="se.png"></span>
         
     </nav>
  <header>   
@@ -122,3 +122,4 @@ header img{
 </body>
 
 </html>
+
